
* Verilog::Language 3.2****

****	Fix Netlist errors with ported interfaces, bug86. [David A]

****	Fix Netlist errors with interfaces-under-interfaces, bug87. [David A]

****	Fix define formal arguments that contain newlines, bug84. [David A]

****	Fix parsing arrayed instances with just "[#]" (no colon).

****	Fix parsing "for (a=0;a;)".

* Verilog::Language 3.202 2009/5/1

****	Fix 3.200 mis-inheriting V2K port types.  [Derek Johnstone]

* Verilog::Language 3.201 2009/4/28

****	Fix "abort" compile error.  [Jayanand AK]

* Verilog::Language 3.200 2009/4/15

**	This is a major release that may break some scripts that worked with
	earlier versions.  Some scripts may need modification to work with
 	this version of Verilog-Perl.

**	This package is now licensed under LGPL v3 and/or Artistic v2.0.

**	Verilog::Parser, SigParser and Netlist now support SystemVerilog.

***	Verilog::SigParser's signal_decl and funcsignal callbacks no longer
	work.  They are replaced by the "var" callback.

***	Added Verilog::SigParser program and endprogram callbacks.

***	Calling Verilog::SigParser->new now requires a symbol_table parameter,
	if multiple modules are to be parsed as part of one compilation unit.

***	Netlist::Port->type accessor is renamed data_type. [Horia Toma]

***	Netlist::Net->type accessor is split into data_type,
	decl_type and net_type accessors.

***	Netlist::Module->ports_ordered now returns objects. [Horia Toma]

***	Added Netlist::Interface and related accessors.

***	Added Netlist::Module->keyword accessor, and use it for "program"s.

****	Fix Macintosh BSD build error.  [Otacilio de Arujo Ramos Neto]

****	Fix parallel make rule build error.  [Chitlesh Goorah]

****	Fix const compile warning in VPreproc.cpp. [Chitlesh Goorah]

****	Fix logic MSBs not being reported in 3.200 beta.  [Horia Toma]

* Verilog::Language 3.121 2009/4/5

****	Make cell names unique when duplicate cells encountered. [Paul Janson]
