@@ -523,4 +523,4 @@ verilog/parser_sv.v:204: VAR  'port' 'o_sized' 'module' '' 'logic [SZ-1:0]' '' '
 verilog/parser_sv.v:204: PORT  'o_sized' 'module' 'output' 'logic [SZ-1:0]' '' '1'
 verilog/parser_sv.v:205: ENDMODULE  'endmodule'
 verilog/parser_sv.v:208: TASK  'task' 'examples'
-verilog/parser_sv.v:211: ENDTASKFUNC  'endtask'
+verilog/parser_sv.v:212: ENDTASKFUNC  'endtask'
