@@ -15,6 +15,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 ****	Fix parsing "for (a=0;a;)".
 
+****	Fix parsing "super.new(...)"
+
 * Verilog::Language 3.202 2009/5/1
 
 ****	Fix 3.200 mis-inheriting V2K port types.  [Derek Johnstone]
